[gd_scene load_steps=2 format=2]

[ext_resource path="res://TerrainGenerator.gd" type="Script" id=1]

[node name="TerrainGenerator" type="Node2D"]
script = ExtResource( 1 )

[node name="Terrain" type="Sprite" parent="."]
centered = false

[node name="Cloud" type="Sprite" parent="."]
visible = false
centered = false

[node name="Labels" type="Node2D" parent="."]

[node name="Octaves" type="Label" parent="Labels"]
margin_left = 750.0
margin_top = 456.0
margin_right = 950.0
margin_bottom = 481.0
text = "Octave Value: "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period" type="Label" parent="Labels"]
margin_left = 750.0
margin_top = 520.0
margin_right = 950.0
margin_bottom = 545.0
text = "Period Value: "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Persistence" type="Label" parent="Labels"]
margin_left = 750.0
margin_top = 584.0
margin_right = 950.0
margin_bottom = 609.0
text = "Persistence Value: "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lacunarity" type="Label" parent="Labels"]
margin_left = 750.0
margin_top = 640.0
margin_right = 950.0
margin_bottom = 665.0
text = "Lacunarity Value: "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sliders" type="Node2D" parent="."]

[node name="Octaves" type="HSlider" parent="Sliders"]
margin_left = 750.0
margin_top = 475.0
margin_right = 950.0
margin_bottom = 500.0
min_value = 1.0
max_value = 9.0
value = 1.0
tick_count = 12
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period" type="HSlider" parent="Sliders"]
margin_left = 750.0
margin_top = 539.0
margin_right = 1350.0
margin_bottom = 564.0
min_value = 2.0
max_value = 1024.0
step = 2.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Persistence" type="HSlider" parent="Sliders"]
margin_left = 750.0
margin_top = 603.0
margin_right = 950.0
margin_bottom = 628.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.1
tick_count = 20
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lacunarity" type="HSlider" parent="Sliders"]
margin_left = 750.0
margin_top = 659.0
margin_right = 1150.0
margin_bottom = 684.0
min_value = 0.05
max_value = 3.0
step = 0.05
value = 0.05
tick_count = 60
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="GenerateBtn" type="Button" parent="Buttons"]
margin_left = 750.0
margin_top = 366.5
margin_right = 950.0
margin_bottom = 401.5
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyTexBtn" type="Button" parent="Buttons"]
margin_left = 722.0
margin_top = 6.50003
margin_right = 878.0
margin_bottom = 41.5
text = "Apply new texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePngBtn" type="Button" parent="Buttons"]
margin_left = 722.0
margin_top = 71.5
margin_right = 878.0
margin_bottom = 106.5
text = "Save as Png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedrawBtn" type="Button" parent="Buttons"]
margin_left = 990.0
margin_top = 366.5
margin_right = 1190.0
margin_bottom = 401.5
text = "Redraw"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/GenerateBtn" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buttons/ApplyTexBtn" to="." method="_on_ApplyTexBtn_pressed"]
[connection signal="pressed" from="Buttons/SavePngBtn" to="." method="_on_SavePngBtn_pressed"]
[connection signal="pressed" from="Buttons/RedrawBtn" to="." method="_on_RedrawBtn_pressed"]
